# celery-redis

./: .coolify  .env  .env.dev.example  .env.example  .env.local  .env.prod.example  .gitignore  CELERY_WORKER_FIX.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_SUMMARY.md  LOCAL_TEST_REPORT.md  PHASE4_IMPLEMENTATION_REPORT.md  QUICK_REFERENCE.md  TASK_STORAGE_FIX.md  VERIFICATION_COMPLETE.md  WEBHOOK_FEATURE_COMPLETE.md  docker-compose.yml  ecosystem.config.js  package-lock.json  pyproject.toml  requirements.txt  setup-celery-redis.sh  start-dev.bat  start-production.sh  test_brain_connection.py  validate_implementation.py  worker_config.py
.claude/: settings.local.json
.specify/memory/: constitution.md
app/: __init__.py  celery_app.py  main.py
app/agents/: __init__.py  duplicate_detector.py  gather_content_generator.py  quality_analyzer.py
app/api/: __init__.py  projects.py  tasks.py  workers.py
app/clients/: __init__.py  brain_client.py  mongodb_client.py  payload_client.py  websocket_client.py
app/config/: __init__.py  monitoring.py  service_discovery.py  settings.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  media_result.py  project.py  task.py
app/storage/: __init__.py  task_storage.py
app/tasks/: __init__.py  audio_tasks.py  automated_gather_tasks.py  base_task.py  evaluation_tasks.py  image_tasks.py  video_tasks.py
app/utils/: webhook.py
docs/: AUTOMATED_GATHER_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  TASK_QUEUE_IMPLEMENTATION.md  TASK_QUEUE_QUICK_REFERENCE.md  WEBHOOK_IMPLEMENTATION.md  evaluate-department-task.md  how-to-use-celery-redis.md  system-integration.md  task-queue-configuration.md  webhook-callbacks.md
docs/requests/: TASK_QUEUE_IMPLEMENTATION_COMPLETE.md  automated-gather.md  need-evaluate-department.md  need-task-queue-requirements.md
docs/rule-docs/: nextjs-payloadcms-rules.md  payload-storage-and-uploads.md
examples/: README.md  test_evaluate_department.py  webhook_example.py
tests/: test_automated_gather_creation.py  test_brain_integration.py  test_evaluation_tasks.py  test_task_queue_config.py  test_webhook_integration.py
(+18 files in other folders)
